added stingray and created movement paths

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,15 @@
 .d3 {
     z-index: -95;
 }
+
+/* PATHS */
+#motionPath {
+    overflow: visible;
+    height: 100%;
+    max-width: 100%;
+}
+
+#motionPath path {
+    stroke-width: 2;
+    stroke: none;
+}
