--- a/src/styles.css
+++ b/src/styles.css
@@ -105,3 +105,13 @@ button {
     right: 50%;
     transform: translate(50%, 50%);
 }
+
+#particles-js {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: none;
+    z-index: -79;
+}
